--- a/navbar.html
+++ b/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md">
-  <a class="navbar-brand" href="#"><img src="img/logo.png" style="width: 250px"/></a>
+  <a class="navbar-brand" href="index.php"><img src="img/logo.png" style="width: 250px"/></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
     <a class="nav-link" href="#"><i class="fas fa-bars"></i></a>
   </button>
@@ -12,7 +12,7 @@
         <a class="nav-link" href="about.php"><i class="fas fa-info"></i> About</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#"><i class="fab fa-github"></i> Source Code</a>
+        <a class="nav-link" href="https://github.com/thegreelax/paperkut-covid19" target="_blank"><i class="fab fa-github"></i> Source Code</a>
       </li>
     </ul>
   </div>
