--- a/navbar.html
+++ b/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-md">
   <a class="navbar-brand" href="index.php"><img src="img/logo.png" style="width: 250px"/></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-    <a class="nav-link" href="#"><i class="fas fa-bars"></i></a>
+    <i class="fas fa-bars" style="color: #d24546"></i>
   </button>
   <div class="collapse navbar-collapse" id="collapsibleNavbar">
     <ul class="navbar-nav">
